[gd_scene load_steps=5 format=2]

[ext_resource path="res://Objects/Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Objects/Player/ActionIndicator.gd" type="Script" id=2]
[ext_resource path="res://Objects/Player/selection.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Game.gd" type="Script" id=5]

[node name="Game" type="Node2D"]
script = ExtResource( 5 )

[node name="Background" type="ColorRect" parent="."]
margin_left = -256.0
margin_top = -144.0
margin_right = 768.0
margin_bottom = 432.0
color = Color( 0.321569, 0.403922, 0.25098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActionIndicator" type="Sprite" parent="."]
modulate = Color( 0.537255, 0.858824, 1, 1 )
scale = Vector2( 3, 3 )
z_index = 1
texture = ExtResource( 3 )
centered = false
script = ExtResource( 2 )

[node name="Tween" type="Tween" parent="ActionIndicator"]

[node name="Player1" parent="." instance=ExtResource( 1 )]

[node name="Player2" parent="." instance=ExtResource( 1 )]
position = Vector2( 384, 24 )
spawn_cell = Vector2( 7, 7 )

[node name="Tween" type="Tween" parent="."]
[connection signal="turn_played" from="." to="ActionIndicator" method="_on_turn_played"]
[connection signal="turn_playing" from="." to="ActionIndicator" method="_on_turn_playing"]
